--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,10 @@
   }
 }
 
-html,
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -197,10 +200,6 @@ section {
   }
 }
 
-/* =========== OTHER SECTIONS =========== */
-#about {
-  background-color: #e0e0e0;
-}
 
 #services {
   background-color: #d0d0d0;
