--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -147,8 +147,11 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
   padding: 20px;
+}
+
+#projects {
+  align-items: center;
 }
 
 /* =========== HOME SECTION =========== */
